objects/SBQQ__Quote__c.object
<CustomObject>
    <customHelpPage>SBQQ__QuoteHelp</customHelpPage>
    <description>Sales quote for a given opportunity. There may be multiple quotes for a single opportunity.</description>
    <fields>
        <fullName>BillingType__c</fullName>
        <description>used to determine which type of billing to auto create based on quote lines</description>
        <formula>IF(CountofMow__c&gt;0, &quot;Mows/Wash&quot;, 
IF(AND(CountofInternalLabor__c&gt;0, Countofnoninternal__c = 0), &quot;Internal Labor Only&quot;, 
&quot;Non-Recurring&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_State_Tax__c</fullName>
        <inlineHelpText>State in which the work will be completed for Tax implications.</inlineHelpText>
        <label>Site/Work State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State_Abbr</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_State__c</fullName>
        <inlineHelpText>State in which Tax applies.</inlineHelpText>
        <label>Billing State_OLD</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CONTAINS_Non_Labor__c</fullName>
        <label>CONTAINS Non-Labor</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Tax_Category__c</field>
            <operation>notEqual</operation>
            <value>Labor</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Case_Number__c</fullName>
        <label>Case Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Con_Req_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Con Req Group</label>
        <referenceTo>Con_Req_Group__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Considerations_Assumptions__c</fullName>
        <label>Considerations &amp; Assumptions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contract_ID__c</fullName>
        <formula>SBQQ__MasterContract__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_T_Cs__c</fullName>
        <label>Contract T&amp;Cs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <description>Contract type from related contract</description>
        <formula>TEXT(SBQQ__MasterContract__r.Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contract type from related contract</inlineHelpText>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Quotes (Contract)</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CountNonInternalMow__c</fullName>
        <label>Count Non-Internal Mow</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.VendorListed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountofInternalLabor__c</fullName>
        <label>Count of Internal Labor</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Tax_Category__c</field>
            <operation>equals</operation>
            <value>Drive Time/Travel - Internal, Labor - Internal</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CountofMow__c</fullName>
        <description>rolls up the number of quote lines with mows or washes</description>
        <label>Count of Mows/Washes</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Tax_Category__c</field>
            <operation>equals</operation>
            <value>Module Washing, Vegetation Management</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Countofnoninternal__c</fullName>
        <label>Count of non-internal</label>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.Tax_Category__c</field>
            <operation>notEqual</operation>
            <value>Drive Time/Travel - Internal, Labor - Internal</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Number__c</fullName>
        <description>Customer Reference or Customer PO number to assist customers in locating POs or Payment Authorizations for Borrego Invoices</description>
        <inlineHelpText>Customer Reference or Customer PO number to assist customers in locating POs or Payment Authorizations for Borrego Invoices</inlineHelpText>
        <label>Customer Reference Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_To__c</fullName>
        <description>To be filled in when quote is created and pulled to PO for the PDF.</description>
        <inlineHelpText>To be filled in when quote is created and pulled to PO for the PDF.</inlineHelpText>
        <label>Delivery To</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawings_Documentation_Image__c</fullName>
        <label>Drawings &amp; Documentation Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Drawings_Documentation_Title__c</fullName>
        <label>Drawings &amp; Documentation Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Rental_Included__c</fullName>
        <formula>TEXT(SBQQ__MasterContract__r.Equipment_Rental_Included__c)</formula>
        <inlineHelpText>Determines whether equipment rentals are included as part of the contract or if they will be billable to the customer. If No, make sure to provide an explanation.</inlineHelpText>
        <label>Equipment Rental Included?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Start_Date__c</fullName>
        <label>Estimated Work Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Internal_Prevailing_Wage_Rate__c</fullName>
        <label>Internal Prevailing Wage Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Labor_Billing__c</fullName>
        <label>Labor Billing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>Not Billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lost_Reason__c</fullName>
        <label>Lost Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Errors in Quote</fullName>
                </value>
                <value>
                    <fullName>Going Different Direction</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Module_Wash_Fixed_Price__c</fullName>
        <label>Module Wash Fixed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Not_to_Exceed__c</fullName>
        <label>Not to Exceed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OK_to_Submit_for_Approval__c</fullName>
        <formula>IF( ISPICKVAL(  SBQQ__Status__c , &quot;In Review&quot; ),
IMAGE(&quot;/servlet/servlet.ImageServer?id=0152H000002BV63&amp;oid=00D8A000000HxBf&amp;lastMod=1586786941000&quot;, &quot;ALREADY SUBMITTED&quot;),

IF(
 OR(
ISBLANK( Site_Address__c ),
ISBLANK( Site_City__c ),
ISBLANK( Site_State__c ),
ISBLANK( Site_Zip__c ),
ISBLANK( TEXT( Type_of_Work__c ) )
),
IMAGE(&quot;/servlet/servlet.ImageServer?id=0152H000002BV5y&amp;oid=00D8A000000HxBf&amp;lastMod=1586787030000&quot;, &quot;NO&quot;),
IMAGE(&quot;/servlet/servlet.ImageServer?id=0152H000002BV5t&amp;oid=00D8A000000HxBf&amp;lastMod=1586786979000&quot;, &quot;YES&quot;)



))</formula>
        <inlineHelpText>Shipping address is required to submit for approval.</inlineHelpText>
        <label>OK to Submit for Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_M_Billing__c</fullName>
        <label>P&amp;M Billing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>Not Billable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Package_Type__c</fullName>
        <description>O&amp;M contract package type - pulls from related contract record</description>
        <formula>TEXT(SBQQ__MasterContract__r.O_M_Package__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>O&amp;M contract package type - pulls from related contract record</inlineHelpText>
        <label>Package Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Due_Days__c</fullName>
        <label>Payment Due (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <formula>SBQQ__PrimaryContact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Name__c</fullName>
        <formula>SBQQ__PrimaryContact__r.FirstName + &quot; &quot; + SBQQ__PrimaryContact__r.LastName</formula>
        <label>Primary Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Phone__c</fullName>
        <formula>SBQQ__PrimaryContact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Description__c</fullName>
        <label>Case Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up field of Technician for delivery</description>
        <label>Recipient</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Regional_Manager_OT_Rate__c</fullName>
        <label>Regional Manager - OT Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Regional_Manager_Rate__c</fullName>
        <label>Regional Manager Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer account for this quote. Defaulted to the account for the opportunity when quote is created.</description>
        <inlineHelpText>The customer account for this quote. Defaults to the account for the opportunity when creating a quote.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__AdditionalDiscountAmount__c</fullName>
        <description>Amount of additional discount on this quote.</description>
        <formula>SBQQ__RegularAmount__c - SBQQ__CustomerAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Enter the amount additionally discounted on this quote.</inlineHelpText>
        <label>Addl. Disc. Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__AverageCustomerDiscount__c</fullName>
        <description>Average customer discount (in percent) for this quote.</description>
        <formula>IF(SBQQ__ListAmount__c = 0, 0, ((SBQQ__ListAmount__c - SBQQ__CustomerAmount__c) / SBQQ__ListAmount__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average customer discount (in percent) for this quote.</inlineHelpText>
        <label>Avg. Customer Disc. (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__AveragePartnerDiscount__c</fullName>
        <description>Average partner discount (in percent) for this quote.</description>
        <formula>IF(SBQQ__CustomerAmount__c = 0, 0, (SBQQ__CustomerAmount__c -  SBQQ__NetAmount__c) / SBQQ__CustomerAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average partner discount (in percent) for this quote.</inlineHelpText>
        <label>Avg. Partner Disc. (%)</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingCity__c</fullName>
        <description>City of the Bill To address for this quote.</description>
        <inlineHelpText>City of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingCountry__c</fullName>
        <description>Country of the Bill To address for this quote.</description>
        <inlineHelpText>Country of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingFrequency__c</fullName>
        <description>Defines the billing frequency.</description>
        <inlineHelpText>Defines the billing frequency.</inlineHelpText>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SBQQ__BillingFrequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingName__c</fullName>
        <description>Name for the Bill To address.</description>
        <inlineHelpText>Name for the Bill To address.</inlineHelpText>
        <label>Bill To Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingPostalCode__c</fullName>
        <description>Postal Code of the Bill To address for this quote.</description>
        <inlineHelpText>Postal Code of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingState__c</fullName>
        <description>State/Province of the Bill To address for this quote.</description>
        <inlineHelpText>State/Province of the Bill To address for this quote.</inlineHelpText>
        <label>Bill To State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__BillingStreet__c</fullName>
        <description>Street portion of the billing address for this quote.</description>
        <inlineHelpText>Street portion of the billing address for this quote.</inlineHelpText>
        <label>Bill To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__ConsumptionRateOverride__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Read-only indicator to show whether a quote contains overriding consumption rates.</description>
        <inlineHelpText>Read-only indicator to show whether a quote contains overriding consumption rates.</inlineHelpText>
        <label>Consumption Rate Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ContractingMethod__c</fullName>
        <description>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</description>
        <inlineHelpText>&quot;By Subscription End Date&quot; creates a separate Contract for each unique Subscription End Date, containing only those Subscriptions. &quot;Single Contract&quot; creates one Contract containing all Subscriptions, regardless of their End Dates.</inlineHelpText>
        <label>Contracting Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>By Subscription End Date</fullName>
                    <default>true</default>
                    <label>By Subscription End Date</label>
                </value>
                <value>
                    <fullName>Single Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerAmount__c</fullName>
        <description>This is a Roll-Up Summary field.</description>
        <inlineHelpText>This is a Roll-Up Summary field.</inlineHelpText>
        <label>Customer Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__CustomerTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__CustomerDiscount__c</fullName>
        <description>Additional discount extended to customer.</description>
        <inlineHelpText>Additional discount extended to the customer on this quote. This value can be overridden at the individual line item level. Any line items that don&apos;t have additional discount explicitly specified will default to this value.</inlineHelpText>
        <label>Additional Disc. (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__DaysQuoteOpen__c</fullName>
        <description>Number of days the quote has been opened.</description>
        <formula>if(OR(ISPICKVAL( SBQQ__Status__c ,&quot;Draft&quot; ),ISPICKVAL( SBQQ__Status__c ,&quot;In Review&quot;),ISPICKVAL( SBQQ__Status__c , &quot;Approved&quot;), ISPICKVAL( SBQQ__Status__c , &quot;Presented&quot;)),Round(NOW() - CreatedDate,0) ,null)</formula>
        <inlineHelpText>Number of days the quote has been opened.</inlineHelpText>
        <label>Days Quote Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template that should be used with this quote. Salesforce CPQ will use this value to default template selection on &quot;Generate Document&quot; screen.</description>
        <inlineHelpText>Template that should be used with this quote. Salesforce CPQ automatically selects the template specified here when you click &quot;Generate Document&quot;</inlineHelpText>
        <label>Default Template</label>
        <referenceTo>SBQQ__QuoteTemplate__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DeliveryMethod__c</fullName>
        <description>Method used to deliver products on this quote.</description>
        <inlineHelpText>Method used to deliver products on this quote.</inlineHelpText>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Download</fullName>
                </value>
                <value>
                    <fullName>Ship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DistributorDiscount__c</fullName>
        <description>Distributor discount that applies to this quote unless overridden on line item level.</description>
        <inlineHelpText>Distributor discount that applies to this quote unless overridden on line item level.</inlineHelpText>
        <label>Distributor Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__Distributor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Distributor for this quote. Defaulted from partner on opportunity with role of &quot;Distributor&quot;.</description>
        <inlineHelpText>Distributor for this quote. Defaulted from partner on opportunity with role of &quot;Distributor&quot;.</inlineHelpText>
        <label>Distributor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Distributor Quotes</relationshipLabel>
        <relationshipName>DistributorQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__DocumentStatus__c</fullName>
        <description>Indicates the status of your Document.</description>
        <inlineHelpText>Indicates the status of your Document: Pending, Sent, Failed.</inlineHelpText>
        <label>Document Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__EmailTemplateId__c</fullName>
        <description>ID of email template that will be pre-populated when documents generated from this quote are emailed.</description>
        <inlineHelpText>If you have a specific email template to use for documents generated and emailed from this quote, enter the email template ID here.</inlineHelpText>
        <label>Email Template Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__EndDate__c</fullName>
        <description>End date for subscriptions in this group.</description>
        <inlineHelpText>End date for subscriptions in this group.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__ExpirationDate__c</fullName>
        <defaultValue>IF(NOT(ISBLANK($Setup.SBQQ__GeneralSettings__c.SBQQ__DefaultQuoteValidity__c)),TODAY() + $Setup.SBQQ__GeneralSettings__c.SBQQ__DefaultQuoteValidity__c, null)</defaultValue>
        <description>Date after which the Quote is no longer valid</description>
        <inlineHelpText>Date after which the Quote is no longer valid</inlineHelpText>
        <label>Expires On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__FirstSegmentTermEndDate__c</fullName>
        <description>Used with multi-segment Products to prorate first segment.</description>
        <inlineHelpText>For multi-segment Products, enter the end date in order to prorate first segment.</inlineHelpText>
        <label>First Segment Term End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SBQQ__GenerateContractedPrice__c</fullName>
        <description>Will generate a contracted price based on all adjusted quote line on quote if flagged.</description>
        <inlineHelpText>Will generate a contracted price based on all adjusted quote line on quote if flagged.</inlineHelpText>
        <label>Generate Contracted Price</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Discount Schedule</fullName>
                </value>
                <value>
                    <fullName>Do Not Generate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Introduction__c</fullName>
        <description>Introduction that can be printed on the generated PDF document.</description>
        <inlineHelpText>Introduction that can be printed on the generated PDF document.</inlineHelpText>
        <label>Introduction</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__Key__c</fullName>
        <description>Unique key used in identifying &quot;shopping cart&quot; quotes without relying on internal IDs.</description>
        <externalId>true</externalId>
        <inlineHelpText>Internal unique key used for identifying &quot;shopping cart&quot; quotes without relying on internal IDs</inlineHelpText>
        <label>Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__LastCalculatedOn__c</fullName>
        <description>The date and time this quote was last calculated.</description>
        <inlineHelpText>The date and time this quote was last calculated.</inlineHelpText>
        <label>Last Calculated On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SBQQ__LastSavedOn__c</fullName>
        <description>The date and time this quote was last saved.</description>
        <inlineHelpText>The date and time this quote was last saved.</inlineHelpText>
        <label>Last Saved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemCount__c</fullName>
        <description>Number of line items in this quote.</description>
        <inlineHelpText>Number of line items in this quote.</inlineHelpText>
        <label>Line Item Count</label>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemsGrouped__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option that allows you to use SolutionGroups(TM) or ad hoc groups to categorize and subtotal quote line items.</description>
        <inlineHelpText>Select this option to use SolutionGroups(TM) or add your own groups on the Edit Lines page to categorize and subtotal quote line items.</inlineHelpText>
        <label>Group Line Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__LineItemsPrinted__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Option which when checked prints individual line items on the PDF document.</description>
        <inlineHelpText>Select the checkbox to print individual line items on the generated PDF quote document for group quotes.</inlineHelpText>
        <label>Print Line Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__ListAmount__c</fullName>
        <description>Total List Amount of each non-optional line item in this quote.</description>
        <inlineHelpText>Total List Amount of each non-optional line item in this quote.</inlineHelpText>
        <label>List Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__ListTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__MarkupRate__c</fullName>
        <description>Default markup rate applied to line items on this quote.</description>
        <inlineHelpText>Default markup rate applied to line items on this quote. You&apos;ll be able to override this value on group and line item level.</inlineHelpText>
        <label>Markup (%)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__MasterContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Master contract with which subscription products in this quote are to be co-terminated.</description>
        <inlineHelpText>Master contract with which subscription products in this quote are to be co-terminated.</inlineHelpText>
        <label>Master Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.SBQQ__Evergreen__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Co-Terminated Quotes</relationshipLabel>
        <relationshipName>CoTerminatedQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__MasterEvergreenContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Designate this contract as the master evergreen contract for the quote.</description>
        <inlineHelpText>Designate this contract as the master evergreen contract for the quote.</inlineHelpText>
        <label>Master Evergreen Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contract.SBQQ__Evergreen__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Co-Terminated Quotes (Master Evergreen Contract)</relationshipLabel>
        <relationshipName>CoTerminatedQuotesEvergreen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__NetAmount__c</fullName>
        <description>Total Net Amount of each non-optional line item in this quote.</description>
        <inlineHelpText>Total Net Amount of each non-optional line item in this quote.</inlineHelpText>
        <label>Net Amount</label>
        <summarizedField>SBQQ__QuoteLine__c.SBQQ__NetTotal__c</summarizedField>
        <summaryFilterItems>
            <field>SBQQ__QuoteLine__c.SBQQ__Optional__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>